[style] fixed map position on firefox

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -5825,7 +5825,9 @@ button.close {
 #worldMap {
   position: absolute !important;
   height: 100%;
-  width: 100%; }
+  width: 100%;
+  top: 0px;
+  left: 0px; }
 
 .legend {
   z-index: 5;
