--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -2,4 +2,6 @@
   position: absolute !important;
   height: 100%;
   width: 100%;
+  top: 0px;
+  left: 0px;
 }
